# reconcile

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pixi.toml  pyproject.toml  release-please-config.json
.github/workflows/: release.yml
docs/: getattr-proxy.md
src/: reconcile.py
src/reconcile/: __init__.py  _mypy_plugin.py  core.py  mypy.py  sentinel.py
tests/: AGENTS.md  README.md  test_reconcile.py
tests/models/: circular.py  parallel.py  training.py  workflow.py
