[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reconcile"
version = "0.2.2"
requires-python = ">=3.12"
dependencies = ["pydantic>=2"]

[tool.hatch.build.targets.wheel]
packages = ["src/reconcile"]
sources = ["src"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src", "tests"]
exclude = ["src/reconcile/mypy.py"]
reportCallIssue = "none"

[tool.mypy]
mypy_path = ["src", "tests"]
explicit_package_bases = true
plugins = ["pydantic.mypy", "reconcile.mypy"]
