[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reconcile"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = ["pydantic>=2"]

[tool.hatch.build.targets.wheel]
packages = ["src/reconcile"]
sources = ["src"]

[tool.mypy]
mypy_path = ["src", "tests"]
explicit_package_bases = true
plugins = ["reconcile.mypy"]
